Fixed component naming error, fixed background tiling issue on mobile, fixed links on header, fixed header sizing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -198,22 +198,26 @@ input {
 
 .header {
   position: absolute;
-  width: 99.18%;
-  top: 0.5vw;
-  height: 3vw;
+  top: 1vw;
+  left: 0px;
+  width: 99vw;
+  height: 50px;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
   
 }
 
+a:has(.header-logo) {
+  width: 50px;
+  height: 50px;
+}
+
 .header-logo {
-  position: absolute;
-  width: 2.5vw;
-  height: 2.5vw;
+  position: relative;
+  width: inherit;
+  height: inherit;
   border-radius: 10vw;
-  opacity: 100%;
-  z-index: 1;
 }
 
 
